--- a/DevFreela.API/appsettings.json
+++ b/DevFreela.API/appsettings.json
@@ -17,6 +17,9 @@
   "Jwt": {
     "Key": "Está é Minha Senha Secreta Para Proteger Meus Tokens!",
     "Issuer": "DevFreela",
-    "Audience":  "ClientFreelancers"
+    "Audience": "ClientFreelancers"
+  },
+  "Services": {
+    "Payments":  "https://localhost:6001"
   }
 }
