--- a/DevFreela.API/appsettings.json
+++ b/DevFreela.API/appsettings.json
@@ -2,8 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*",
@@ -12,7 +11,7 @@
     "FinishAt": "18:00:00"
   },
   "ConnectionStrings": {
-    "DevFreelaCs": "Server=localhost\\SQLEXPRESS;Database=DevFreela;Trusted_Connection=True"
+    "DevFreelaCs": "Server=localhost\\SQLEXPRESS;Database=DevFreela;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Jwt": {
     "Key": "Está é Minha Senha Secreta Para Proteger Meus Tokens!",
